[tool.poetry]
name = "felz"
version = "0.1.0"
description = ""
authors = ["DavidAlba2627 <albadavid802@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.3.4"
pandas = "^2.3.3"
scikit-learn = "^1.7.2"
matplotlib = "^3.10.7"
prophet = "^1.1.7"
statsmodels = "^0.14.5"
pymannkendall = "^1.4.3"
sktime = "^0.39.0"
ipywidgets = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
